overlays/native-only/networkpolicy/dev/allow-egress-to-monitoring.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-to-monitoring
  namespace: dev
  labels:
    app.kubernetes.io/managed-by: argocd
    app.kubernetes.io/component: networkpolicy
    app.kubernetes.io/name: networkpolicy-dev
    app.kubernetes.io/part-of: native-security
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
