overlays/native-only/networkpolicy/dev/default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: dev
  labels:
    app.kubernetes.io/managed-by: argocd
    app.kubernetes.io/component: networkpolicy
    app.kubernetes.io/name: networkpolicy-dev
    app.kubernetes.io/part-of: native-security
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
